更新配置文件

--- a/hy_forum/src/main/resources/application.properties
+++ b/hy_forum/src/main/resources/application.properties
@@ -11,7 +11,7 @@ mybatis.config-location=classpath:mybatis-config.xml
 multipart.maxFileSize=100Mb
 multipart.maxRequestSize=1000Mb
 
-server.port=8081
+server.port=8080
 
 # redis single instance config
 spring.redis.host=127.0.0.1
@@ -26,3 +26,9 @@ spring.redis.timeout=60000
 #spring.redis.pool.max-idle=100
 #spring.redis.pool.min-idle=20
 #spring.redis.timeout=60000
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
